--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,21 +2,18 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.hufs.change">
 
-    <permission
-        android:name="com.hufs.change.permission.MAPS_RECEIVE"
-        android:protectionLevel="signature" />
-    <uses-permission android:name="org.hongdooho.change.permission.MAPS_RECEIVE" />
 
+    <uses-permission android:name="com.hufs.change.permission.MAPS_RECEIVE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
 
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true"/>
-
 
     <application
         android:allowBackup="true"
@@ -26,13 +23,6 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Layout">
 
-        <meta-data
-            android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyCQ8yAVNPuZXOkmhlYyvGwRtMDiDoaC9MA"/>
-        <meta-data
-            android:name="com.kakao.sdk.AppKey"
-            android:value="@string/kakao_app_key" />
-
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -40,7 +30,16 @@
             </intent-filter>
         </activity>
 
+        <meta-data
+            android:name="com.kakao.sdk.AppKey"
+            android:value="@string/kakao_app_key" />
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAAHQaj47ag54hak8HvF_bLSmQKHPo9asw" />
         <activity android:name=".LoginActivity"></activity>
 
+
     </application>
+
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 </manifest>
