--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,18 +5,17 @@
     <permission
         android:name="com.hufs.change.permission.MAPS_RECEIVE"
         android:protectionLevel="signature" />
-    <uses-permission android:name="org.hongdooho.change.permission.MAPS_RECEIVE" />
 
+    <uses-permission android:name="org.hongdooho.change.permission.MAPS_RECEIVE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
-
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <uses-feature
         android:glEsVersion="0x00020000"
-        android:required="true"/>
-
+        android:required="true" />
 
     <application
         android:allowBackup="true"
@@ -25,10 +24,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Layout">
-
+        <meta-data
+            android:name="com.google.android.actions"
+            android:resource="@xml/actions" />
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyCQ8yAVNPuZXOkmhlYyvGwRtMDiDoaC9MA"/>
+            android:value="AIzaSyCQ8yAVNPuZXOkmhlYyvGwRtMDiDoaC9MA" />
         <meta-data
             android:name="com.kakao.sdk.AppKey"
             android:value="@string/kakao_app_key" />
@@ -36,11 +37,11 @@
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".LoginActivity"></activity>
-
+        <activity android:name=".LoginActivity" />
     </application>
+
 </manifest>
