--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,20 +34,18 @@ allprojects {
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.2.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-
-    implementation 'me.relex:circleindicator:2.1.4'
-
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.github.pedroSG94:AutoPermissions:1.0.3'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation group: project.KAKAO_SDK_GROUP, name: 'usermgmt', version: project.KAKAO_SDK_VERSION
 
-
+    implementation 'me.relex:circleindicator:2.1.4'
+    implementation 'com.google.android.material:material:1.2.1'
 
 //    def nav_version = "2.3.1"
 //    implementation "androidx.navigation:navigation-fragment:$nav_version"
