--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ allprojects {
 }
 
 dependencies {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
@@ -46,6 +47,7 @@ dependencies {
     implementation 'com.github.pedroSG94:AutoPermissions:1.0.3'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation group: project.KAKAO_SDK_GROUP, name: 'usermgmt', version: project.KAKAO_SDK_VERSION
+
 
 
 
